Fix nav jump on mobile

--- a/client/components/core/_timeline.scss
+++ b/client/components/core/_timeline.scss
@@ -103,6 +103,7 @@
       background-color: #46a5b2;
       text-align: center;
       vertical-align: middle;
+      border: none;
     }
 
     .timeline__left-button.disabled,
